# Py2048

./: .gitignore  MANIFEST.in  README.md  ddfghjk  nohup.out  pyproject.toml  setup.py
py2048/: block.py  const.py  data.py  error.py  game.py  playback.py
py2048/data/: Record.json  ScoreList.json
src/py2048/: __init__.py  __main__.py  block.py  const.py  data.py  game.py  game.pyi  playback.py
src/py2048/data/: Record.json
