[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "play_2048"
version = "0.1.0"
description = "A simple 2048 game implementation"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/yourusername/play_2048"
Documentation = "https://github.com/yourusername/play_2048/wiki"
Source = "https://github.com/yourusername/play_2048"
Tracker = "https://github.com/yourusername/play_2048/issues"

[tool.setuptools.packages.find]
where = ["src"]