[build-system]
requires = ["setuptools>=75", "wheel>=0.40"]
build-backend = "setuptools.build_meta"

[project]
name = "python2048"
version = "1.0.0b2"
description = "Python 2048"
authors = [
    { name = "GQX", email = "kill114514251@outlook.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries :: pygame",
    "Natural Language :: English",
    "Natural Language :: Chinese (Simplified)",
    "License :: OSI Approved :: MIT License",
    "Environment :: GUI (Graphical User Interface)",
    "Operating System :: Linux",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10"
]
dependencies = [
    "pygame>=2.5.0",
    "pygame_menu>=4.5.0"
]

[project.urls]
Homepage = "https://github.com/BinaryGuo/Py2048"
Documentation = "https://github.com/BinaryGuo/Py2048/wiki"
Source = "https://github.com/BinaryGuo/Py2048"
Tracker = "https://github.com/BinaryGuo/Py2048/issues"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
py2048 = "py2048.__main__:main"
